Updated readme. Fixed a bug in claro theme where the hidden selected-columns-submit-order field was visible.

--- a/css/flexible-views-column-selector.css
+++ b/css/flexible-views-column-selector.css
@@ -49,6 +49,7 @@
   display: none;
 }
 
-.js-form-item.form-item.form-item-selected-columns-submit-order {
+.js-form-item.form-item.form-item-selected-columns-submit-order,
+.js-form-item.form-item.form-item--selected-columns-submit-order {
   display: none;
 }
